integrational tests base for order service

--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/delivery
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.liquibase.change-log=classpath:sql/changelog-root.xml
+spring.liquibase.change-log=classpath:sql/changelog-master.xml
