--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,54 @@
 services:
-  orders_db:
-    image: "postgres:11"
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=orders
-
   orders:
     build:
-      context: orders
+      context: ./orders
     ports:
       - "8080:8080"
-    depends_on:
-      - orders_db
+    #    depends_on:
+    #      - orders_db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://orders_db:5432/orders
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/orders
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
+
+  kitchen:
+    build:
+      context: ./kitchen
+    ports:
+      - "8081:8080"
+    #    depends_on:
+    #      - kitchen_db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/kitchen
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+
+#  orders_db:
+#    image: "postgres:14"
+#    environment:
+#      - POSTGRES_DB=orders
+#      - POSTGRES_USER=postgres
+#      - POSTGRES_PASSWORD=postgres
+#    ports:
+#      - "6543:5432"
+#    healthcheck:
+#      test: [ "CMD-SHELL", "pg_isready -U postgres -d orders" ]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 2
+#      start_period: 10s
+#
+#  kitchen_db:
+#    image: "postgres:14"
+#    environment:
+#      - POSTGRES_DB=kitchen
+#      - POSTGRES_USER=postgres
+#      - POSTGRES_PASSWORD=postgres
+#    ports:
+#      - "6544:5432"
+#    healthcheck:
+#      test: [ "CMD-SHELL", "pg_isready -U postgres -d kitchen" ]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 2
+#      start_period: 10s
