--- a/kitchen/pom.xml
+++ b/kitchen/pom.xml
@@ -9,15 +9,17 @@
     <version>2.7.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
+
   <groupId>com.example</groupId>
   <artifactId>kitchen</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>kitchen</name>
   <description>kitchen</description>
+
   <properties>
     <java.version>11</java.version>
-    <testcontainers.version>1.17.4</testcontainers.version>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -82,6 +84,8 @@
   </dependencies>
 
   <build>
+    <finalName>kitchen</finalName>
+
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
