--- a/kitchen/src/main/resources/application.properties
+++ b/kitchen/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/kitchen
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/kitchen
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.liquibase.change-log=classpath:sql/changelog-master.xml
