rabbitmq implementation in order service

--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/orders
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.liquibase.change-log=classpath:sql/changelog-master.xml
+
+
+## RabbitMQ config
+
+order.exchange.name=order_exchange
+order.created.key=order.created
