event handling in kitchen service without business logic

--- a/kitchen/src/main/resources/application.properties
+++ b/kitchen/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/kitchen
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.liquibase.change-log=classpath:sql/changelog-master.xml
+
+
+## RabbitMQ config
+
+order.exchange.name=order_exchange
+order.queue=order_queue
+order.anything.binding-key=order.*
