added business logic to event handling in Kitchen service

--- a/kitchen/src/main/resources/application.properties
+++ b/kitchen/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.liquibase.change-log=classpath:sql/changelog-master.xml
 
 ## RabbitMQ config
 
-order.exchange.name=order_exchange
-order.queue=order_queue
-order.anything.binding-key=order.*
+orders.host=localhost:8080
+orders.exchange.name=order_exchange
+orders.queue=order_queue
+orders.anything.binding-key=order.*
